<resources>
    <string name="app_name">Banlac</string>
    <string name="logo_description">Logo de banlac</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="view_login">Login</string>
    <string name="hello">¡Hola!</string>
    <string name="sign_in_prompt">Inicia sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Ingresar</string>
    <string name="forgot_password"><u>Restablecer contraseña</u></string>
    <string name="no_account_prompt">¿No tienes una cuenta?</string>
    <string name="sign_up"><u>Regístrate</u></string>


    <string name="menu_extraction">Extracción</string>
    <string name="menu_extraction_registry">Registrar extracción</string>
    <string name="menu_extraction_edit">Editar extracción</string>
    <string name="menu_breastfeeding">Toma</string>
    <string name="menu_alarm">Alarma</string>
    <string name="menu_statistical_information">Información estadística</string>
    <string name="menu_log_out">Cerrar sesión</string>

    <string name="table_extraction_id">#</string>
    <string name="table_extraction_date">Fecha</string>
    <string name="table_extraction_amount">Cantidad (Oz)</string>
    <string name="table_extraction_action">Acción</string>

    <string name="create_extraction_hour">Hora</string>
    <string name="create_extraction_left_breast">Seno izquierdo</string>
    <string name="create_extraction_right_breast">Seno derecho</string>
    <string name="create_extraction_chronometer">Cronómetro</string>
    <string name="create_extraction_note">Nota</string>
    <string name="create_extraction_textarea">Escriba aquí...</string>
    <string name="create_extraction_save">Guardar</string>

    <string name="menu_alarm_registry">Registrar alarma</string>
    <string name="menu_alarm_edit">Editar alarma</string>
    <string name="table_alarm_id">#</string>
    <string name="table_alarm_event">Evento</string>
    <string name="table_alarm_config">Configuración</string>
    <string name="table_alarm_action">Acción</string>

    <string name="create_alarm_notify">Notificación</string>
    <string name="create_alarm_note">Nota</string>
    <string name="create_alarm_textarea">Escriba aquí...</string>
    <string name="create_alarm_save">Guardar</string>
    <string name="rb_alarm_repeat">Repetir después de</string>
    <string name="rb_alarm_time">Fecha y hora exactas</string>
    <string name="alarm_days">Días</string>
    <string name="alarm_min">Min</string>
    <string name="alarm_hours">Hora</string>


</resources>