<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.banlac.ui.login.LoginFragment"
        android:label="@string/view_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_nav_extraction"
            app:destination="@id/nav_extraction" />
    </fragment>

    <fragment
        android:id="@+id/nav_extraction"
        android:name="com.example.banlac.ui.extraction.ExtractionFragment"
        android:label="@string/menu_extraction"
        tools:layout="@layout/fragment_extraction" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.banlac.ui.gallery.GalleryFragment"
        android:label="@string/menu_breastfeeding"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.banlac.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_alarm"
        tools:layout="@layout/fragment_slideshow" />
</navigation>