<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_60"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="118dp"
        android:layout_height="118dp"
        android:src="@mipmap/ic_banlac"
        android:contentDescription="@string/logo_description"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Hello TextView -->
    <TextView
        android:id="@+id/tvHello"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/hello"
        android:gravity="end|center_vertical"
        android:textAppearance="@style/login_main_text"
        android:layout_marginEnd="64dp"
        app:layout_constraintTop_toTopOf="@+id/logoImageView"
        app:layout_constraintBottom_toTopOf="@+id/tvSignInPrompt"
        app:layout_constraintStart_toEndOf="@+id/logoImageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Sign-in Prompt TextView -->
    <TextView
        android:id="@+id/tvSignInPrompt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sign_in_prompt"
        android:gravity="end|center_vertical"
        android:textAppearance="@style/login_main_text"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHello"
        app:layout_constraintBottom_toBottomOf="@+id/logoImageView"
        app:layout_constraintStart_toEndOf="@+id/logoImageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="96dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvSignInPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/inputTextStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/inputTextStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/link_text"
        android:textColor="@color/primary_100"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/tertiary_30"
        android:text="@string/sign_in"
        android:textColor="@color/primary_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"/>

    <TextView
        android:id="@+id/tvNoAccountPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_prompt"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/link_text"
        android:layout_alignParentLeft="true"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/btnSignUp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAppearance="@style/link_text"
        app:layout_constraintTop_toBottomOf="@+id/tvNoAccountPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>