<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alarm_edit.AlarmEditFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEvent"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/table_alarm_event"
        app:boxBackgroundColor="@color/primary_100"
        app:boxStrokeColor="@color/primary_30"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:helperTextTextColor="?attr/colorOnSurfaceVariant"
        app:hintTextColor="@color/tertiary_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEvent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:text="Extracción"
            android:inputType="none"
            android:focusable="false"
            android:cursorVisible="false"
            android:textColor="@color/input_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNotify"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/create_alarm_notify"
        app:boxBackgroundColor="@color/primary_100"
        app:boxStrokeColor="@color/primary_30"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:helperTextTextColor="?attr/colorOnSurfaceVariant"
        app:hintTextColor="@color/tertiary_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEvent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputNotify2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:text="Sonido"
            android:inputType="none"
            android:focusable="false"
            android:cursorVisible="false"
            android:textColor="@color/input_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/secondary_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputNotify" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        android:orientation="vertical"
        >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbRepeat"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_alarm_repeat"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayoutRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textInputHours"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/textInputDays"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:hint="@string/alarm_days"
                app:boxBackgroundColor="@color/primary_100"
                app:boxStrokeColor="@color/primary_30"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:helperTextTextColor="?attr/colorOnSurfaceVariant"
                app:hintTextColor="@color/tertiary_30"
                app:hintTextAppearance="@style/hintTextAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:text=" 0"
                    android:textSize="20dp"
                    android:textColor="@color/input_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputHours"
                app:layout_constraintStart_toEndOf="@id/textInputDays"
                app:layout_constraintEnd_toStartOf="@id/textInputMin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:hint="@string/alarm_hours"
                app:boxBackgroundColor="@color/primary_100"
                app:boxStrokeColor="@color/primary_30"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:helperTextTextColor="?attr/colorOnSurfaceVariant"
                app:hintTextColor="@color/tertiary_30"
                app:hintTextAppearance="@style/hintTextAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:text=" 1"
                    android:textSize="20dp"
                    android:textColor="@color/input_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputMin"
                app:layout_constraintStart_toEndOf="@id/textInputHours"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:hint="@string/alarm_min"
                app:boxBackgroundColor="@color/primary_100"
                app:boxStrokeColor="@color/primary_30"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:helperTextTextColor="?attr/colorOnSurfaceVariant"
                app:hintTextColor="@color/tertiary_30"
                app:hintTextAppearance="@style/hintTextAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:text="  0"
                    android:textSize="20dp"
                    android:textColor="@color/input_hint" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_marginTop="16dp"
            android:id="@+id/rbTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_alarm_time"/>
        <LinearLayout
            android:id="@+id/linearLayoutTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/table_extraction_date"
                app:boxBackgroundColor="@color/primary_100"
                app:boxStrokeColor="@color/primary_30"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:helperTextTextColor="?attr/colorOnSurfaceVariant"
                app:hintTextColor="@color/tertiary_30">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:text="yyyy/mm/dd"
                    android:textColor="@color/input_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/create_extraction_hour"
                app:boxBackgroundColor="@color/primary_100"
                app:boxStrokeColor="@color/primary_30"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:helperTextTextColor="?attr/colorOnSurfaceVariant"
                app:hintTextColor="@color/tertiary_30">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:text="00:00"
                    android:textColor="@color/input_hint" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/tertiary_30"
        android:text="@string/create_extraction_save"
        android:textColor="@color/primary_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio" />

</androidx.constraintlayout.widget.ConstraintLayout>