<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alarm.AlarmFragment">

    <TableLayout
        android:id="@+id/tableLayoutTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Fila 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Celda 1.1 -->
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/table_alarm_id"
                android:textColor="@color/tertiary_30" />

            <!-- Celda 1.2 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:padding="4dp"
                android:text="@string/table_alarm_event"
                android:textColor="@color/tertiary_30"/>

            <!-- Celda 1.3 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:padding="4dp"
                android:text="@string/table_alarm_config"
                android:textColor="@color/tertiary_30"/>

            <!-- Celda 1.4 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/table_alarm_action"
                android:textColor="@color/tertiary_30"/>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayoutData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/table_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tableLayoutTitle">

        <!-- Fila 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Celda 1.1 -->
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:padding="4dp"
                android:text="1"
                android:textColor="@color/tertiary_90"/>

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="#000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:padding="4dp"
                android:textSize="14dp"
                android:text="Toma"
                android:textColor="@color/tertiary_90"/>

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="#000" />

            <!-- Celda 1.3 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:padding="1dp"
                android:textSize="10dp"
                android:text="Repetir después de 3h\nVibrar"
                android:textColor="@color/tertiary_90"/>

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="#000" />

            <!-- Celda 1.4 -->
            <ImageButton
                android:id="@+id/icono_celda_1_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/table_alarm_action"
                android:gravity="center"
                android:padding="4dp"
                android:src="@drawable/ic_ellipsis_vertical" />
        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="#000" />

        <!-- Fila 2 -->
        <TableRow
            android:id="@+id/table_row_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Celda 2.1 -->
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:padding="4dp"
                android:text="2"
                android:textColor="@color/tertiary_90"/>

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="#000" />

            <!-- Celda 2.2 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:padding="4dp"
                android:textSize="14dp"
                android:text="Extracción"
                android:textColor="@color/tertiary_90"/>

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="#000" />

            <!-- Celda 2.3 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:padding="1dp"
                android:textSize="10dp"
                android:text="Repetir después de 1h\nMúsica"
                android:textColor="@color/tertiary_90"/>

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="#000" />

            <!-- Celda 2.4 -->
            <ImageButton
                android:id="@+id/icono_celda_2_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/table_alarm_action"
                android:gravity="center"
                android:padding="4dp"
                android:src="@drawable/ic_ellipsis_vertical" />
        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="#000" />
    </TableLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:backgroundTint="@color/secondary_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/secondary_100" />

</androidx.constraintlayout.widget.ConstraintLayout>